Feat: adicionado herança completa a médicos e usuários