@@ -3,11 +3,14 @@ package br.com.mesquita.service;
 import java.time.LocalDate;
 import java.util.List;
 
+import org.hibernate.PropertyValueException;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import br.com.mesquita.model.Medico;
 import br.com.mesquita.repository.MedicoRepository;
+import io.micrometer.common.util.StringUtils;
 
 @Service
 public class MedicoService {
@@ -25,29 +28,36 @@ public class MedicoService {
 	}
 
 	public void demitir(Long id) {
-		Medico medico = buscarPorId(id);
+		Medico medico = medicoRepository.findById(id).orElse(null);
 		medico.setAtivo(false);
 		medico.setDataDemissao(LocalDate.now());
 		medicoRepository.save(medico);
 	}
 
-	public Long salvar(Medico medico) {
-		reativarSeJaExistente(medico);
+	public Long salvar(Medico medico) throws PropertyValueException {
+		BCryptPasswordEncoder encoder = new BCryptPasswordEncoder();
 
-		if (medico.getSenha() != null && !medico.getSenha().isBlank()) {
-			medico.setSenha(passwordEncoder.encode(medico.getSenha()));
+		if (medico.getId() != null) {
+			Medico medicoBanco = buscarPorId(medico.getId());
+
+			if (medicoBanco.getAtivo() == false) { // lógica antiga
+				medico.setAtivo(true);
+			}
+			if (StringUtils.isBlank(medico.getSenha())) { // médico está sendo atualizado e a senha não foi alterada
+				medico.setSenha(medicoBanco.getSenha());
+			} else {
+				medico.setSenha(encoder.encode(medico.getSenha()));
+			}
+		} else {
 			medico.setRole("ROLE_USUARIO");
+			medico.setSenha(encoder.encode(medico.getSenha()));
+		}
+
+		if (StringUtils.isBlank(medico.getSenha())) {
+			throw new PropertyValueException("Senha não pode estar vazia.", "Medico", "Senha");
 		}
 
 		return medicoRepository.save(medico).getId();
-	}
-
-	private void reativarSeJaExistente(Medico medico) {
-		for (Medico m : listar()) {
-			if (m.getCpf() != null && m.getCpf().equals(medico.getCpf()) && !m.getAtivo()) {
-				m.setAtivo(true);
-			}
-		}
 	}
 
 	public Medico buscarPorId(Long id) {
